--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,12 +1,28 @@
-<h1>Welcome to the Posts!</h1>
+<h1 class="text-3xl font-bold underline text-gray-500">
+    Welcome to the Posts!
+</h1>
 <p>read everthing people are talking about...</p>
-<ul>
+<ul class="mt-10">
     <% if @ideas %>
         <% @ideas.each do |idea| %>
-            <li>
-                <%= idea.name %> / <%= idea.description%> / <%= idea.picture%>
+            <li class="flex justify-between bg-gray-400 rounded ml-5 pl-3">
+                <div>
+                    <%=idea.id%>
+                </div>
+                <div>
+                    <%= idea.name %>  
+                </div>
+                <div>
+                    <%= idea.description%>  
+                </div>
+                <div>
+                    <%= idea.picture%>
+                </div>
+                <div class="bg-blue-500 hover:bg-blue-700 text-white rounded px-3 w-40 text-center">
+                    <%= link_to "see this post!", idea_path(idea.id)%>
+                </div>
             </li>
-            <%= link_to "see this post!", idea_path(idea.id) %>
+            <br>
         <% end %>
     <% end %>
 </ul>
