--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,21 @@
     <title>PostsRails</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="ml-14 mr-14">
+      <nav class="flex justify-between mt-7">
+        <div class="hover:underline">
+          <%= link_to "Home", root_path %>
+        </div>
+        <div class="bg-blue-500 rounded hover:bg-blue-700 text-white px-3">
+          <%= link_to "new post!", new_idea_path%>
+        </div>
+      </nav>
+      <main class="container mt-7 px-5">
+        <br>
+        <%= yield %>
+      </main>
   </body>
 </html>
